MDEV-13401 Assertion failure during main.partition test run